--- a/MvcCv/MvcCv.csproj
+++ b/MvcCv/MvcCv.csproj
@@ -239,6 +239,8 @@
     <Content Include="Views\Default\Deneyim.cshtml" />
     <Content Include="Views\Default\Egitimlerim.cshtml" />
     <Content Include="Views\Default\Yeteneklerim.cshtml" />
+    <Content Include="Views\Default\Hobilerim.cshtml" />
+    <Content Include="Views\Default\Sertifikalarım.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
