--- a/MvcCv/MvcCv.csproj
+++ b/MvcCv/MvcCv.csproj
@@ -241,6 +241,7 @@
     <Content Include="Views\Default\Yeteneklerim.cshtml" />
     <Content Include="Views\Default\Hobilerim.cshtml" />
     <Content Include="Views\Default\Sertifikalarım.cshtml" />
+    <Content Include="Views\Default\iletisim.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
