--- a/MvcCv/MvcCv.csproj
+++ b/MvcCv/MvcCv.csproj
@@ -2358,6 +2358,7 @@
     <Content Include="Views\Egitim\EgitimDuzenle.cshtml" />
     <Content Include="Views\Sertifika\Index.cshtml" />
     <Content Include="Views\Sertifika\SertifikaGetir.cshtml" />
+    <Content Include="Views\Sertifika\SertifikaEkle.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
