--- a/MvcCv/MvcCv.csproj
+++ b/MvcCv/MvcCv.csproj
@@ -178,6 +178,9 @@
     <Compile Include="Models\Entity\TblSertifikalarim.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entity\TblSosyalMedya.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Entity\TblYeteneklerim.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -2363,6 +2366,7 @@
     <Content Include="Views\Sertifika\SertifikaEkle.cshtml" />
     <Content Include="Views\Iletisim\Index.cshtml" />
     <Content Include="Views\Hobi\Index.cshtml" />
+    <Content Include="Views\Default\SosyalMedya.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
