--- a/MvcCv/Web.config
+++ b/MvcCv/Web.config
@@ -17,9 +17,11 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+	  <!--Admin controller kısmından giriş yapma-->
 	  <authentication mode="Forms">
 		  <forms loginUrl="/Login/Index"></forms>
 	  </authentication>
+	  <!--admin controller kısmından giriş yapma-->
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
