--- a/MvcCv/MvcCv.csproj
+++ b/MvcCv/MvcCv.csproj
@@ -2041,6 +2041,62 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="CoreBlogTema-main\Blog 3 Columns.txt" />
+    <Content Include="CoreBlogTema-main\web\about.html" />
+    <Content Include="CoreBlogTema-main\web\blog1.html" />
+    <Content Include="CoreBlogTema-main\web\blog2.html" />
+    <Content Include="CoreBlogTema-main\web\blog3.html" />
+    <Content Include="CoreBlogTema-main\web\contact.html" />
+    <Content Include="CoreBlogTema-main\web\css\bootstrap.css" />
+    <Content Include="CoreBlogTema-main\web\css\contact.css" />
+    <Content Include="CoreBlogTema-main\web\css\fontawesome-all.css" />
+    <Content Include="CoreBlogTema-main\web\css\jquery.desoslide.css" />
+    <Content Include="CoreBlogTema-main\web\css\single.css" />
+    <Content Include="CoreBlogTema-main\web\css\style.css" />
+    <Content Include="CoreBlogTema-main\web\images\1.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\2.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\3.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\4.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\5.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\6.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\7.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\8.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\b1.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\b2.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\b3.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\b4.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\b5.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\banner1.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\banner2.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\banner3.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\banner4.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\banner5.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\left.png" />
+    <Content Include="CoreBlogTema-main\web\images\m1.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\m2.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\m3.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\m4.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\right.png" />
+    <Content Include="CoreBlogTema-main\web\images\t1.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\t2.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\t3.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\t4.jpg" />
+    <Content Include="CoreBlogTema-main\web\images\top_up.png" />
+    <Content Include="CoreBlogTema-main\web\index.html" />
+    <Content Include="CoreBlogTema-main\web\js\bootstrap.js" />
+    <Content Include="CoreBlogTema-main\web\js\easing.js" />
+    <Content Include="CoreBlogTema-main\web\js\jquery-2.2.3.min.js" />
+    <Content Include="CoreBlogTema-main\web\js\jquery.desoslide.js" />
+    <Content Include="CoreBlogTema-main\web\js\jquery.flexisel.js" />
+    <Content Include="CoreBlogTema-main\web\js\modernizr.custom.min.js" />
+    <Content Include="CoreBlogTema-main\web\js\move-top.js" />
+    <Content Include="CoreBlogTema-main\web\login.html" />
+    <Content Include="CoreBlogTema-main\web\register.html" />
+    <Content Include="CoreBlogTema-main\web\single.html" />
+    <Content Include="CoreBlogTema-main\web\w3layouts-license.txt" />
+    <Content Include="CoreBlogTema-main\web\webfonts\fa-brands-400.svg" />
+    <Content Include="CoreBlogTema-main\web\webfonts\fa-regular-400.svg" />
+    <Content Include="CoreBlogTema-main\web\webfonts\fa-solid-900.svg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -2434,6 +2490,19 @@
     <Content Include="login-form-20\scss\bootstrap\_utilities.scss" />
     <Content Include="login-form-20\scss\bootstrap\_variables.scss" />
     <Content Include="login-form-20\scss\style.scss" />
+    <Content Include="CoreBlogTema-main\web\images\Thumbs.db" />
+    <Content Include="CoreBlogTema-main\web\webfonts\fa-brands-400.eot" />
+    <Content Include="CoreBlogTema-main\web\webfonts\fa-brands-400.ttf" />
+    <Content Include="CoreBlogTema-main\web\webfonts\fa-brands-400.woff" />
+    <Content Include="CoreBlogTema-main\web\webfonts\fa-brands-400.woff2" />
+    <Content Include="CoreBlogTema-main\web\webfonts\fa-regular-400.eot" />
+    <Content Include="CoreBlogTema-main\web\webfonts\fa-regular-400.ttf" />
+    <Content Include="CoreBlogTema-main\web\webfonts\fa-regular-400.woff" />
+    <Content Include="CoreBlogTema-main\web\webfonts\fa-regular-400.woff2" />
+    <Content Include="CoreBlogTema-main\web\webfonts\fa-solid-900.eot" />
+    <Content Include="CoreBlogTema-main\web\webfonts\fa-solid-900.ttf" />
+    <Content Include="CoreBlogTema-main\web\webfonts\fa-solid-900.woff" />
+    <Content Include="CoreBlogTema-main\web\webfonts\fa-solid-900.woff2" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -2497,10 +2566,13 @@
     <Content Include="Views\Admin\AdminEkle.cshtml" />
     <Content Include="Views\Admin\AdminDuzenle.cshtml" />
     <Content Include="Views\Default\Projelerim.cshtml" />
+    <Content Include="Views\Proje\ProjeDetay.cshtml" />
+    <Content Include="Views\Proje\ProjeGetir.cshtml" />
+    <Content Include="Views\Proje\Index.cshtml" />
+    <Content Include="Views\Proje\ProjeEkle.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Proje\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
