--- a/MvcCv/MvcCv.csproj
+++ b/MvcCv/MvcCv.csproj
@@ -54,6 +54,12 @@
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -167,6 +173,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entity\sysdiagrams.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Entity\TblAdmin.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -183,6 +192,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Entity\TblIletisim.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Entity\TblMesajlar.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Entity\TblProjelerim.cs">
@@ -204,8 +216,10 @@
     <Compile Include="Repositories\HakkimdaRepository.cs" />
     <Compile Include="Repositories\HobiRepository.cs" />
     <Compile Include="Repositories\IletisimRepository.cs" />
+    <Compile Include="Repositories\MesajlarRepository.cs" />
     <Compile Include="Repositories\ProjeRepository.cs" />
     <Compile Include="Repositories\SertifikaRepository.cs" />
+    <Compile Include="Repositories\SosyalMedyaRepository.cs" />
     <Compile Include="Repositories\YetenekRepository.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -2047,6 +2061,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="CoreBlogTema-main\Blog 3 Columns.txt" />
     <Content Include="CoreBlogTema-main\web\about.html" />
     <Content Include="CoreBlogTema-main\web\blog1.html" />
@@ -2576,6 +2591,7 @@
     <Content Include="Views\Proje\ProjeGetir.cshtml" />
     <Content Include="Views\Proje\Index.cshtml" />
     <Content Include="Views\Proje\ProjeEkle.cshtml" />
+    <Content Include="Views\Proje\ProjeYorumlar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
