--- a/MvcCv/MvcCv.csproj
+++ b/MvcCv/MvcCv.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Controllers\IletisimController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ProjeController.cs" />
+    <Compile Include="Controllers\ProjeMesajController.cs" />
     <Compile Include="Controllers\SertifikaController.cs" />
     <Compile Include="Controllers\SosyalMedyaController.cs" />
     <Compile Include="Controllers\YetenekController.cs" />
@@ -2595,6 +2596,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\ProjeMesaj\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
